--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   flutter_bloc: ^8.1.4
   modal_progress_hud_nsn: ^0.5.1
   dio: ^5.4.1
+  dartz: ^0.10.1
 
 
 # For information on the generic Dart part of this file, see the
