--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
   modal_progress_hud_nsn: ^0.5.1
   dio: ^5.4.1
   dartz: ^0.10.1
+  #shared_preferences: ^2.2.2
 
 
 # For information on the generic Dart part of this file, see the
